samples/_failures_safe/1761539572_bc9287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54c16a7b.c: In function ‘main’:
./samples/SAFE/__tmp_54c16a7b.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
